[package]
name = "tower-rate-limiter-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
http = "1.1.0"
pin-project = "1.1.5"
redis = { version = "0.25.3", features = ["tokio-comp","aio", "connection-manager"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
axum = "0.7.5"

[lib]
name = "tower_rate_limiter_redis"

[[example]]
name = "rate_limit"